--- a/stocktry/views/queryAll.jade
+++ b/stocktry/views/queryAll.jade
@@ -7,4 +7,6 @@ body
     p
     for value, key in result
       //- td= key + "." + value
-      td= value+" "
+
+      td(class = key) 
+         = value + " "
