optimize the display. insert js into jade

--- a/stocktry/views/queryAll.jade
+++ b/stocktry/views/queryAll.jade
@@ -1,12 +1,17 @@
-head
-  meta(charset='utf-8')
-body
-  h1 queryAll.jade
-  for result in results
-    //- p= result.id
-    p
-    for value, key in result
-      //- td= key + "." + value
-
-      td(class = key) 
-         = value + " "
+doctype html
+html
+  head
+    meta(charset='utf-8')
+    style
+    //-  include style.css
+    script(src='../javascripts/queryall.js')
+  body
+    h1 queryAll.jade
+    for result in results
+      //- p= result.id
+      p
+      div(class="one_stock" style = "display: flex")
+        for value, key in result
+          //- td= key + "." + value
+          div(class = key style='width:7%; color: blue;')
+            = value + " "
