--- a/stocktry/views/queryAll.jade
+++ b/stocktry/views/queryAll.jade
@@ -1,17 +1,20 @@
 doctype html
 html
   head
+    title Personal Tool
     meta(charset='utf-8')
     style
     //-  include style.css
+    link(rel='stylesheet' type='text/css' href='../stylesheets/queryall.css')
+    script(src='../javascripts/jquery-2.1.3.min.js')
     script(src='../javascripts/queryall.js')
   body
-    h1 queryAll.jade
+    h1 Personal Tool
     for result in results
       //- p= result.id
       p
-      div(class="one_stock" style = "display: flex")
+      div(class="one_stock")
         for value, key in result
           //- td= key + "." + value
-          div(class = key style='width:7%; color: blue;')
+          div(class = key)
             = value + " "
